<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="169dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ofhy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/pp"
            android:layout_width="93dp"
            android:layout_height="107dp"
            android:layout_marginStart="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ofhy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.113" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/namaku"
            android:textAlignment="textEnd"
            android:textColor="#fff"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.144" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="1800dp"
            android:layout_height="8dp"
            android:background="@drawable/underline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintVertical_bias="0.076"
            tools:layout_editor_absoluteX="34dp">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enam"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post"
                    android:textColor="#fff"
                    android:textSize="18sp"></TextView>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="6dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/underline" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delapan"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follower"
                    android:textColor="#fff"
                    android:textSize="18sp"></TextView>

                <RelativeLayout
                    android:layout_width="120dp"
                    android:layout_height="6dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/underline" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sembilan"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="#fff"
                    android:textSize="18sp"></TextView>

                <RelativeLayout
                    android:layout_width="90dp"
                    android:layout_height="6dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/underline" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="20dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/list_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_follow"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/ikuti"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.835" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/mail_black"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.176"><![CDATA[
            @gmail.com"/>
        ]]>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="249dp"
            android:layout_height="46dp"
            android:text="@string/email"
            android:textColor="#fff"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.191" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/phone_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.175" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="50dp"
            android:text="@string/pone"
            android:textColor="#fff"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.144" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>